--- a/app/views/memo/index.html.erb
+++ b/app/views/memo/index.html.erb
@@ -1,4 +1,10 @@
 <h1>Memo#index</h1>
 <p>Find me in app/views/memo/index.html.erb</p>
 
+<% @posts.each do |post| %>
+  <%= post.text %>
+  <%= post.created_at %>
+<% end %>
+
 <%= link_to 'new', new_memo_path %>
+
