--- a/app/views/memo/new.html.erb
+++ b/app/views/memo/new.html.erb
@@ -1,4 +1,4 @@
-<%= form_with model: @user do |form| %>
-  <%= form.text_field :name %>
-  <%= form.submit %>
+<%= form_with( url: '/memo', model: @post) do |form| %>
+  <%= form.text_field :text %>
+  <%= form.submit "Post" %>
 <% end %>
